# gh2

./: README.md  go.mod  go.sum  main.go  make.bat  pyproject.toml
cmd/: app.go  clone.go  config.go  download.go
core/: config.go  log.go  proxy.go  rest.go  rest_test.go  survey.go  web.go
src/gh2/: __init__.py  cli.py  cmd_clone.py  cmd_download.py  config.py  logging_config.py  parser.py  survey.py
src/gh2/_download/: __init__.py  rest.py  web.py
tests/: test_parser.py
