[project]
name = "gh2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Swift", email = "anemele@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "fake-useragent>=2.2.0",
    "mashumaro[orjson,toml]>=3.17",
    "orjson>=3.11.4",
    "rich>=14.2.0",
    "survey>=5.4.2",
    "tenacity>=9.1.2",
]

[project.scripts]
ghcl = "gh2.cli:main_cl"
ghdl = "gh2.cli:main_dl"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = ['I']

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
